2007-04-07  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileSystem.m: Minor logging improvement.

2007-03-22  Quentin Mathe <qmathe@club-internet.fr>

	* ApplicationManager.m:
	* EtoileSystem.m:
	* SCTask.m: 
	Shut down all compilation warnings except one in ApplicationManager. This
	corrects the potential bug in SCTask outlined in #8729

2007-03-22  Quentin Mathe <qmathe@club-internet.fr>

	* SystemTaskList.plist: Updated to include AZDock and AZBackground.

2007-03-18  Yen-Ju Chen <yjchenx gmail>

	* WorkspaceCommKit/NSWorkspace+Communication.m:
	Do not check for GSWorkspaceApplication because in any case,
	it will not work. (See source code for more explanation).

2007-03-18  Yen-Ju Chen <yjchenx gmail>

	* SCTask.h:
	* EtoileSystem.h:
	Change arguments to NSArray type since it is what SystemTaskList.plist has.
	* EtoileSystem.m:
	Support arguments.

2007-03-17  Quentin Mathe <qmathe@club-internet.fr>

	Last part of the update to support both sequential and parallel launch of
	tasks.
	* EtoileSystem.h:
	* EtoileSystem.m:
	New config file keys Priority and OnStart.
	Written documentation for the keys supported in the config file.
	New ivars _launchQueue, _launchGroup.
	(-initWithArguments:): Added _launchQueue ivar init and moved config file
	monitoring start to -run.
	(-run): Moved the process starting to -applicationDidFinishLaunching:
	(-applicationDidFinishLaunching:): Heavily modified to include config file
	monitoring start and main method calls to launch processes by priority 
	order. Also registers for task termination notifications.
	(-noteApplicationLaunched:, 
	-processQueueWithProcesses:, 
	-processGroupQueueWithProcessQueue:, 
	-startProcessesSequentiallyByPriorityOrder:,
	startProcessesParallely:): New methods.
	(-synchronizeProcessesWithConfigFile): Updated to take in account new keys
	Priority and OnStart when creating task objects.
	Improved or modified a bit logging statements across the file.
	* SCTask.h:
	* SCTask.m: 